# pynsc

./: .gitignore  03_install_from_testpypi.bat  05_install.bat  Pipfile  README.md  pip_install.bat  pyproject.toml  pyproject.toml.NEW  setup.cfg.NEW  setup.py  setup.py.new
pynsc/: __init__.py  nsc_error.py  nsc_request.py
studentclearinghouse/: __init__.py  config.py  nsc_error.py  nsc_request.py  nsc_return_se_convert.py  nsc_return_se_convert.r
